# kamailio-py

./: .gitignore  LICENSE.txt  README.rst  pyproject.toml
data/zoom/: phone.json
kamailio/: __init__.py  _basic.py  _config.py  _provider.py  _util.py  _zoom.py  log.py  main.py  trace.py  var.py  zoom.py
sample/: basic.py  config.py  config.py.x  zoom.py
tests/: test_cfg.py  test_cfg.yaml
