[build-system]
build-backend = "setuptools.build_meta"
requires = [ "setuptools", "wheel", "setuptools-scm",]

[project]
classifiers = [
	"Intended Audience :: Developers",
	"Programming Language :: Python :: 3",
	"Framework :: Trio",
	"Framework :: AnyIO",
	"License :: OSI Approved",
	"Development Status :: 4 - Beta",
	]
dependencies = [
	]
dynamic = [ "version",]
keywords = [ "kamailio", "sip" ]
requires-python = ">=3.8"
name = "kamailio"
description = "Python support code for kamailio"
readme = "README.rst"
[[project.authors]]
name = "Matthias Urlichs"
email = "smurf@noris.de"

[project.license]
file = "LICENSE.txt"

[project.urls]
homepage = "https://intra.office.noris.de/Wiki/Zoom/Phone"
repository = "git@gitlab.noris.net:voice/kamailio_py.git"

[tool.flake8]
max-line-length = 99
ignore = [ "F841", "E731", "E502", "E402", "E127", "E123", "W503", "E231", "E203", "F401"]

[tool.isort]
line_length = 99
multi_line_output = 3
profile = "black"

[tool.setuptools]
packages = [ "kamailio",]

[tool.setuptools.package-data]
kamailio = [ '*.json', ]

[tool.pylint.messages_control]
disable="wrong-import-order,ungrouped-imports,too-many-nested-blocks,unspecified-encoding,missing-module-docstring,no-else-continue,too-many-instance-attributes,too-many-statements,too-many-return-statements,superfluous-parens,too-few-public-methods,use-dict-literal,too-many-locals,no-else-return,too-many-arguments,too-many-branches,invalid-name,fixme"

[tool.setuptools_scm]

[tool.black]
line-length = 99
